Fix styles so name doesn't crowd navbar on mobile

--- a/styles/Nav/Name.module.scss
+++ b/styles/Nav/Name.module.scss
@@ -1,6 +1,8 @@
 .name {
   font-size: 24px;
   background-color: #333;
+  max-width: 25%;
+  text-align: center;
   color: white;
   padding: 8px;
   border-radius: 8px;
